--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "element-plus": "^2.2.9",
+    "vue": "^3.2.33"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
