--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vueing",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "set VITE_BASE_URL=http://localhost:9200/&& vite",
     "build": "vite build",
     "preview": "vite preview --port 5050"
   },
